--- a/signUp.html
+++ b/signUp.html
@@ -112,6 +112,6 @@
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./axios/app.js"></script>
-    <script src="./signup.js"></script>
+    <script src="./js/signup.js"></script>
   </body>
 </html>
