--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Recados</h1>
     
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
