--- a/login.html
+++ b/login.html
@@ -72,6 +72,6 @@
     <script src="https://kit.fontawesome.com/57991f803a.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./axios/app.js"></script>
-    <script src="./login.js"></script>
+    <script src="./js/login.js"></script>
   </body>
 </html>
